2025-02-28T00:37:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13578732790 # 579
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-28
* notice: last 14d: unq all: 8 17
* notice: prev accum: outdated-unq outdated-all / unq all: 758 1236 / 775 1253
* notice: next accum: outdated-unq outdated-all / unq all: 759 1237 / 776 1254
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-13] / [2025-02-27]

2025-02-27T00:37:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13556253163 # 578
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-27
* notice: last 14d: unq all: 8 17
* notice: prev accum: outdated-unq outdated-all / unq all: 757 1235 / 774 1252
* notice: next accum: outdated-unq outdated-all / unq all: 758 1236 / 775 1253
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-12] / [2025-02-26]

2025-02-26T00:37:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13533875310 # 577
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-26
* notice: last 14d: unq all: 8 17
* notice: prev accum: outdated-unq outdated-all / unq all: 756 1234 / 773 1251
* notice: next accum: outdated-unq outdated-all / unq all: 757 1235 / 774 1252
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-11] / [2025-02-25]

2025-02-24T00:38:18Z: