@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-28T00:37:12Z",
-  "count_outdated" : 1237,
-  "uniques_outdated" : 759,
-  "count" : 1254,
-  "uniques" : 776,
+  "timestamp" : "2025-03-01T00:40:38Z",
+  "count_outdated" : 1239,
+  "uniques_outdated" : 761,
+  "count" : 1255,
+  "uniques" : 777,
   "clones" : [
-    {
-      "timestamp": "2025-02-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-02-16T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-02-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
